src/tests/snapshots/hebi__tests__fn_call_closure__counter.snap
---
source: src/tests/fn_call_closure.rs
expression: snapshot
---
# Modules:


# Input:
fn counter(start=0, *, step=1):
  class State:
    value = start
  state := State()
  fn inner():
    temp := state.value
    state.value += step
    return temp
  return inner

c := counter()
print c()
print c()
print c()


# Result (success):
none

# Stdout:
0
1
2


