src/tests/snapshots/hebi__tests__fn_call_closure__nested.snap
---
source: src/tests/fn_call_closure.rs
expression: snapshot
---
# Modules:


# Input:
fn a():
  fn b():
    v := 10
    fn c():
      fn d():
        return v
      return d
    return c
  return b

print a()()()()


# Result (success):
none

# Stdout:
10


