src/tests/snapshots/hebi__tests__fn_call_closure__simple.snap
---
source: src/tests/fn_call_closure.rs
expression: snapshot
---
# Modules:


# Input:
fn a():
  v := 10
  fn b():
    print v
  return b

a()()


# Result (success):
none

# Stdout:
10


